testsuite/tests/typecheck/should_fail/T17021b.stderr

T17021b.hs:10:1: error: [GHC-55233]
    • Data instance has non-* return kind ‘F Int’
    • In the data instance declaration for ‘Fix’
